# pino

./: .gitattributes  .gitignore  Caddyfile  LICENSE  Makefile  README.md  TODO.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  Makefile  alembic.ini  pyproject.toml
backend/src/melpino_backend/: __init__.py  __main__.py  asgi.py  errors.py
backend/src/melpino_backend/api/: __init__.py  admin_logs.py  admin_metrics.py  admin_schedule.py  admin_students.py  auth.py  bookings.py  calendar.py  config_public.py  courses.py  errors.py  health.py  invoices.py  invoices_public.py  waivers.py  webhooks.py
backend/src/melpino_backend/app/: __init__.py  app.py  config.py
backend/src/melpino_backend/auth/: __init__.py  booking_tokens.py  csrf.py  passwords.py  rate_limit.py  sessions.py
backend/src/melpino_backend/db/: __init__.py  base.py
backend/src/melpino_backend/db/migrations/: env.py
backend/src/melpino_backend/db/migrations/versions/: 0000_initial_schema.py  0001_booking_source.py  0002_students_dedup_unique.py
backend/src/melpino_backend/db/models/: __init__.py  admin_audit_log.py  bookings.py  class_sessions.py  courses.py  email_opt_out.py  invoices.py  password_reset_tokens.py  reminders.py  sessions.py  students.py  users.py  waitlist_entries.py  waivers.py
backend/src/melpino_backend/domain/: __init__.py
backend/src/melpino_backend/domain/auth/: __init__.py  service.py
backend/src/melpino_backend/domain/booking/: __init__.py  capacity.py  service.py  sweep.py
backend/src/melpino_backend/domain/calendar/: ics.py
backend/src/melpino_backend/domain/courses/: __init__.py  service.py
backend/src/melpino_backend/domain/invoices/: __init__.py  recurrence.py  refunds.py  service.py  stats.py
backend/src/melpino_backend/domain/invoices/pdf/: __init__.py  invoice.tex.jinja  melpinoinvoice.cls  renderer.py
backend/src/melpino_backend/domain/notifications/: __init__.py  mailer.py  notify.py  templates.py
backend/src/melpino_backend/domain/payments/: __init__.py  currency.py
backend/src/melpino_backend/domain/payments/providers/: __init__.py  paypal.py
backend/src/melpino_backend/domain/storage/: __init__.py  base.py  factory.py  local.py  r2.py
backend/src/melpino_backend/domain/students/: __init__.py  service.py
backend/src/melpino_backend/domain/waivers/: __init__.py  service.py
backend/src/melpino_backend/logging/: __init__.py  config.toml  filter.py  formatter.py  handler.py  json_formatter.py  logger.py  request_context.py  retention.py
backend/src/melpino_backend/scripts/: __init__.py  health_check.py  scheduler.py
backend/src/melpino_backend/testing/: __init__.py  fake_paypal.py  fake_smtp.py  fake_stripe.py
backend/tests/: conftest.py
backend/tests/integration/: test_admin_schedule.py  test_auth_integration.py  test_booking_capacity.py  test_booking_source_metrics.py  test_migrations.py  test_payments.py  test_payments_p4_gaps.py  test_waivers.py
backend/tests/system/: test_admin_waivers_flow.py  test_auth_flow.py  test_config_public.py  test_guest_booking_journey.py  test_health.py  test_invoice_pdf_generation.py  test_stripe_webhooks.py
backend/tests/unit/: test_auth.py  test_booking_lifecycle.py  test_health.py  test_ics.py  test_invoice_pdf.py  test_invoices.py  test_log_handler.py  test_log_retention.py  test_storage.py
docs/: README.md  deployment.md  secrets.md  usage.md
frontend/: Makefile  env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
ops/: backup.Dockerfile  backup.sh  setup-vps.sh  sync_public_media.py
ops/release_watch/: Makefile  pyproject.toml
ops/release_watch/src/release_watch/: __main__.py  config.py  deploy.py  github.py  state.py
ops/release_watch/systemd/: release-watch.service
ops/release_watch/tests/: test_state.py
(+154 files in other folders)
