[project]
name = "release-watch"
version = "0.1.0"
description = "Polls GitHub for new tagged releases and redeploys the VPS stack when one lands"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "typani",
]

[project.scripts]
release-watch = "release_watch.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/release_watch"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-xdist>=3.6",
    "ruff>=0.7",
    "ty>=0.0.1a1",
]
